--- a/css/index.css
+++ b/css/index.css
@@ -22,8 +22,6 @@
 /* main */
 body {background-color: #1a1a1a; color: #b3b3b3; font-size: 12px;}
 h2 {color: white; font-size 14px; text-align: center; margin-top: inherit;}
-h3 {color: #b3b3b3; font-size 12px; text-align: center; line-height: 1.5em;
- font-weight: normal; margin-top: inherit; margin-bottom: inherit;}
 code {background: #303030 !important; border: 1px solid rgba(255, 255, 255, .1);
 	padding: 1px; border-radius: 2px;}
 a {color: black; text-decoration: none;}
@@ -91,6 +89,7 @@ td {padding-bottom: 3px; padding-top: 3px; padding-left: 10px;}
 th {color: black; font-weight: bold; font-size: 16px; padding: 3px 0;}
 
 table td:first-child { text-align: right; vertical-align: top;}
+table td.blurb {text-align: center; line-height: 1.5em;}
 table td.center {text-align: center;}
 table td.intro {text-align: left; line-height: 1.5em; padding-bottom: 10px;}
 table td.showhide {text-align: center; padding-top: 7px; padding-bottom: 7px;}
