--- a/css/index.css
+++ b/css/index.css
@@ -72,8 +72,11 @@ div.btn-left {float: left; position: relative; left: -10px; top: -2px;}
 .ttip .ttxtb {
 	visibility: hidden; width: 210px; background-color: #b3b3b3; color: black; text-align: center;
 	border-radius: 6px; padding: 5px 0; position: absolute; z-index: 1; top: -12px; left: 130%;}
-.ttip:hover .ttxt, .ttip:hover .ttxtb {visibility: visible;}
-.ttip .ttxt::after, .ttip .ttxtb::after {
+.ttip .ttxtx {
+	visibility: hidden; width: 250px; background-color: #b3b3b3; color: black; text-align: center;
+	border-radius: 6px; padding: 5px 0; position: absolute; z-index: 1; top: -12px; left: 130%;}
+.ttip:hover .ttxt, .ttip:hover .ttxtb, .ttip:hover .ttxtx {visibility: visible;}
+.ttip .ttxt::after, .ttip .ttxtb::after, .ttip .ttxtx::after {
 	content: " "; position: absolute; top: 50%; right: 100%; margin-top: -5px; border-width: 5px;
 	border-style: solid; border-color: transparent #b3b3b3 transparent transparent;}
 
