--- a/css/index.css
+++ b/css/index.css
@@ -29,7 +29,8 @@ a.blue {color: #8abfda; text-decoration: none;}
 .no_color {color: #b3b3b3;}
 .hidden {display: none;}
 .bad {color: #ff4f4f;}
-.good {color: #8fff8f;}
+.good {color: #8cdc8c;} /* use test7 */
+.ttc {color: #dcdc8c;} /* use test4 */
 .mono, .toDataURL, .toBlob, .winding, .getImageData, .isPointInPath, .fillText,
 	.isPointInStroke, .readPixels, .getContext, .mozGetAsFile, .strokeText {
 	font-family: monospace, "Courier New";}
