--- a/css/index.css
+++ b/css/index.css
@@ -126,6 +126,7 @@ table td.sub6 {color: var(--test6);}
 table td.sub7 {color: var(--test7);}
 table td.sub9 {color: var(--test9);}
 table td.sub10 {color: var(--test10);}
+table td.sub11 {color: var(--test11);}
 
 #tb1 th {background-color: #f07878;}
 #tb2 th {background-color: #f0a078;}
