--- a/css/index.css
+++ b/css/index.css
@@ -76,7 +76,7 @@ a.blue {color: #8abfda; text-decoration: none;}
 /* show/hide */
 input[type='checkbox'] {display: none;}
 .lbl-toggle {display: block; cursor: pointer;}
-.togA, .togD, .togD1, .togM, .togC, .togE, .togF, .togW {display: none;}
+.togA, .togD, .togD1, .togM, .togC, .togE, .togF, .togF1, .togW {display: none;}
 
 /* buttons */
 button {background-color: #1a1a1a; border-width: 0px; text-align: center;
