--- a/css/index.css
+++ b/css/index.css
@@ -21,7 +21,7 @@
 
 /* main */
 body {background-color: #1a1a1a; color: #b3b3b3;}
-h2 {color: white; font-size 14px; text-align: center; margin-top: inherit;}
+h2 {color: white; font-size: 14px; text-align: center; margin-top: inherit;}
 code {background: #303030 !important; border: 1px solid rgba(255, 255, 255, .1);
 	padding: 1px; border-radius: 2px;}
 a {color: black; text-decoration: none;}
