--- a/css/index.css
+++ b/css/index.css
@@ -30,15 +30,19 @@ a.blue {color: #8abfda; text-decoration: none;}
 .no_color {color: #b3b3b3;}
 .hidden {display: none;}
 .offscreen {position: absolute; top: -2000%;}
-.bad {color: #ff4f4f;}
-.good {color: #8cdc8c;} /* use test7 */
 .group {font-weight: bold;}
-.neutral {color: #dcdc8c;} /* use test4 */
-.orange {color: #dca78c;} /* use test2 */
 .mono, .toDataURL, .toBlob, .winding, .getImageData, .isPointInPath, .fillText,
 	.isPointInStroke, .readPixels, .getContext, .mozGetAsFile, .strokeText {
 	font-family: monospace, "Courier New";}
 .strike {text-decoration: line-through;}
+
+/* notation colors */
+.good {color: #8cdc8c;} /* test7 */
+.bad {color: #ff4f4f;}
+.neutral {color: #dcdc8c;} /* test4 */
+.orange {color: #dca78c;} /* test2 */
+
+ /* s=section: for breaking output with color: e.g steps in LB */
 .s1 {color: var(--test1);}
 
 .normalized {
@@ -81,8 +85,8 @@ a.blue {color: #8abfda; text-decoration: none;}
 /* show/hide */
 input[type='checkbox'] {display: none;}
 .lbl-toggle {display: block; cursor: pointer;}
-.togA, .togD, .togD1, .togM, .togC, .togE, .togF, .togF1, .togL, .togL2,
-.togM2, .togOS1, .togOS2, .togW, .togZ {display: none;}
+.togA, .togD, .togD1, .togM, .togC, .togE, .togF, .togF1,
+.togL, .togM2, .togOS1, .togW, .togZ {display: none;}
 
 /* buttons */
 button {background-color: #1a1a1a; border-width: 0px; text-align: center;
