--- a/css/index.css
+++ b/css/index.css
@@ -143,6 +143,7 @@ button {background-color: #1a1a1a; border-width: 0px; text-align: center;
 div.nav-title {position: relative; width: 900px;}
 div.nav-down {position: absolute; right: 5px; top: 0px; width: 20px;}
 div.nav-up {position: absolute; left: 5px; top: 0px; width: 20px;}
+div.nav-right {position: absolute; right: 5px; top: -2px; width: 0px;}
 
 /* tables */
 table {width: 900px; border-collapse: collapse; margin: 0 auto 10px auto; font-size: 12px;}
