--- a/css/index.css
+++ b/css/index.css
@@ -33,7 +33,7 @@ a.blue {color: #8abfda; text-decoration: none;}
 .group {font-weight: bold;}
 .mono {font-family: monospace, "Courier New";}
 .strike {text-decoration: line-through;}
-.spaces {white-space: pre;}
+.spaces {white-space: pre-wrap;}
 
 /* notation colors */
 .faint {color: #606060;} /* #888888 darker off white */
